--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-linear-gradient": "~12.1.2",
+    "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
