--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "redux-persist": "^6.0.0",
     "expo-image-picker": "~14.1.1",
     "expo-camera": "~13.2.1",
-    "expo-permissions": "~14.1.1"
+    "expo-permissions": "~14.1.1",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "expo-notifications": "~0.18.1",
+    "expo-device": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
