--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
+    "expo-camera": "~13.2.1",
+    "expo-device": "~5.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-notifications": "~0.18.1",
+    "expo-permissions": "~14.1.1",
     "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -26,15 +32,14 @@
     "react-native-image-picker": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
+    "react-native-webview": "11.26.0",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^8.1.0",
     "redux-persist": "^6.0.0",
-    "expo-image-picker": "~14.1.1",
-    "expo-camera": "~13.2.1",
-    "expo-permissions": "~14.1.1",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "expo-notifications": "~0.18.1",
-    "expo-device": "~5.2.1"
+    "expo-av": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
