--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
+    "expo-av": "~13.2.1",
     "expo-camera": "~13.2.1",
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1299.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-picker": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
@@ -38,8 +40,7 @@
     "react-native-webview": "11.26.0",
     "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^8.1.0",
-    "redux-persist": "^6.0.0",
-    "expo-av": "~13.2.1"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
