--- a/package.json
+++ b/package.json
@@ -9,41 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-picker/picker": "^2.4.10",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/stack": "^6.3.16",
-    "@reduxjs/toolkit": "^1.9.5",
-    "expo": "~48.0.18",
-    "expo-av": "~13.2.1",
-    "expo-camera": "~13.2.1",
-    "expo-device": "~5.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-notifications": "~0.18.1",
-    "expo-permissions": "~14.1.1",
-    "expo-speech": "~11.1.1",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-calendars": "^1.1299.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-picker/picker": "^2.7.5",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
+    "expo": "^51.0.14",
+    "expo-av": "~14.0.5",
+    "expo-camera": "~15.0.11",
+    "expo-cli": "^6.3.12",
+    "expo-device": "~6.0.2",
+    "expo-image-picker": "~15.0.5",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-notifications": "~0.28.9",
+    "expo-permissions": "~14.4.0",
+    "expo-speech": "~12.0.2",
+    "expo-status-bar": "~1.12.1",
+    "react": "^18.2.0",
+    "react-native": "0.74.2",
+    "react-native-calendars": "^1.1305.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-image-picker": "^5.6.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1",
-    "react-native-webview": "11.26.0",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "~3.31.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.2.0",
+    "react-native-webview": "^13.8.6",
     "react-native-youtube-iframe": "^2.3.0",
-    "react-redux": "^8.1.0",
+    "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.7"
   },
   "private": true
 }
